# BTL_ATTT

./: .gitignore  README.md  pyproject.toml  requirements.txt
antigravity_framework/: cli.py
antigravity_framework/api/: main.py
antigravity_framework/core/: __init__.py  config.py  engine.py  events.py  logger.py  plugin.py  result.py
antigravity_framework/cve/: analyzer.py  cve_2025_29525.py
antigravity_framework/gpon/access_control/: cmd_injection.py  ftp_access.py  web_api_test.py
antigravity_framework/gpon/auth/: loid_test.py  onu_registration.py  serial_number.py
antigravity_framework/gpon/encryption/: aes128_test.py  key_exchange.py  optical_tap.py
antigravity_framework/ml/: anomaly_detector.py  feature_extractor.py  model_trainer.py  onu_detector.py
antigravity_framework/reporting/: dashboard.py  report_builder.py
antigravity_framework/wifi/access_control/: acl_test.py  client_isolation.py  mac_filter.py
antigravity_framework/wifi/auth/: dot1x.py  evil_twin.py
antigravity_framework/wifi/encryption/: fragattacks.py  kr00k.py  krack.py  wpa3_fuzzing.py
configs/: default.yaml  gpon_config.yaml  wifi_config.yaml
reports/: report.html  report.json
scripts/: run_tests.sh  setup_env.sh
tests/unit/: test_core.py
