[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity_framework"
version = "1.0.0"
description = "Hệ thống Kiểm thử An ninh WiFi & GPON"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AntiGravity Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "scapy>=2.5.0",
    "pyshark>=0.6",
    "paramiko>=3.4.0",
    "requests>=2.31.0",
    "netmiko>=4.3.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "joblib>=1.3.0",
    "matplotlib>=3.8.0",
    "boofuzz>=0.4.0",
    "jinja2>=3.1.0",
    "plotly>=5.18.0",
]

[project.scripts]
antigravity = "antigravity_framework.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["antigravity_framework*"]
